# prediction-pulse

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
deploy/: CUTOVER.md  persona-pulse-dashboard.service  persona.env.example  prediction-pulse-dashboard.service  prediction-pulse-drafter.service  prediction-pulse-engager.service  prediction-pulse-metrics.service  prediction-pulse-publisher.service  prediction-pulse-trendpoller.service  prediction-pulse.service  pulse@.service
personas/beanfacts/: persona.toml  system_prompt.md
personas/example/: persona.toml  system_prompt.md
personas/gnome/: persona.toml  system_prompt.md
src/pulse/: __init__.py  channels.py  config.py  drafter.py  engager.py  main.py  models.py  (+6 more)
tests/: conftest.py  test_channels.py  test_config_lazy.py  test_drafter.py  test_engage_filter.py  test_engage_orchestrator.py  test_engage_search.py  test_engager.py  test_generator_source.py  test_kalshi_source.py  test_main.py  test_main_engage.py  test_main_metrics.py  test_main_trend.py  test_mastodon.py  test_metrics_base.py  test_metrics_collect.py  test_metrics_source.py  test_models.py  test_multichannel_acceptance.py  test_normalize.py  test_persona.py  test_pipeline_spec.py  test_poller.py  test_publish.py  test_publisher.py  test_scheduler.py  test_scheduler_windows.py  test_select.py  test_server.py  test_server_metrics.py  test_server_personas.py  test_server_trends.py  test_smoke.py  test_store.py  test_store_engage.py  test_store_metrics.py  test_supervisor.py  test_trending_client.py  test_trending_match.py  (+6 more)
(+41 files in other folders)
